# wordfreq

./: .travis.yml  CMakeLists.txt  Makefile  README.md
.github/: FUNDING.yml
doc/: Doxyfile
resources/Docker/: Dockerfile.dev
resources/debian/: changelog  control  copyright  rules
resources/rpm/: rpm.spec
resources/usr/share/man/man1/: wordfreq.1
src/: CMakeLists.txt  mmap.h  wordfreq.c  wordfreq.h
test/: CMakeLists.txt  test_mmap.c  test_wordfreq.c
test/data/: test01.txt
